--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
     <title>zType</title>
   </head>
-  <body class="bg-primary">
+  <body class="bg-primary font-primary">
     <div
-      class="w-screen h-screen place-items-center grid grid-rows-[auto_1fr_auto] font-josef"
+      class="w-screen h-screen place-items-center grid grid-rows-[auto_1fr_auto]"
     >
       <header
         class="bg-primary w-full md:w-3/4 flex justify-between items-center p-8"
@@ -32,14 +32,19 @@
         </button>
       </header>
       <main class="w-full p-8 flex flex-col justify-center items-center">
-        <div class="w-full flex justify-center md:justify-end md:w-3/4">
+        <div
+          class="w-full flex flex-col justify-center md:justify-between md:flex-row md:w-3/4"
+        >
+          <p id="time-container" class="text-white text-center mb-4 text-3xl">
+            30
+          </p>
           <div
             class="toolset p-3 rounded-md bg-zinc-900 mb-8 align-bottom flex justify-center"
           >
             <button
               class="tool-btn active-tool-btn"
               data-filter="time"
-              onclick="filter(event)"
+              onclick="timeFilter(event)"
               data-time="30"
             >
               30s
@@ -47,7 +52,7 @@
             <button
               class="tool-btn"
               data-filter="time"
-              onclick="filter(event)"
+              onclick="timeFilter(event)"
               data-time="60"
             >
               60s
@@ -55,28 +60,43 @@
             <button
               class="tool-btn"
               data-filter="punctuation"
-              onclick="filter(event)"
+              onclick="addfilter(event)"
             >
               Punctuation
             </button>
             <button
               class="tool-btn"
               data-filter="numbers"
-              onclick="filter(event)"
+              onclick="addfilter(event)"
             >
               Numbers
             </button>
-            <button class="tool-btn" onclick="updateWords()">Reload</button>
+            <button class="tool-btn" onclick="location.reload();">
+              Reload
+            </button>
           </div>
         </div>
+        <div class="cursor"></div>
         <div
           class="words-container md:w-3/4 min-h-[300px] max-h-[300px] flex flex-wrap content-start overflow-x-auto"
         ></div>
+        <div
+          class="results-container hidden md:w-3/4 min-h-[300px] max-h-[300px] flex flex-col justify-center"
+        >
+          <h2 class="text-3xl text-secondary">Time Finished.</h2>
+          <p class="text-white mt-4 mb-4">
+            Following are your results. To take the test again, click on reload
+            button in top right.
+          </p>
+          <div id="results" class="flex flex-row"></div>
+        </div>
       </main>
       <footer class="bg-primary w-full p-8 text-center text-white">
         Developed By Zia 🤓
       </footer>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timer/1.3.0/moment-timer.min.js"></script>
     <script src="./logic.js"></script>
   </body>
 </html>
