--- a/src/index.html
+++ b/src/index.html
@@ -13,36 +13,69 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>zType</title>
   </head>
-  <body class="bg-primary font-primary">
+  <body class="font-primary">
     <div
-      class="w-screen h-screen place-items-center grid grid-rows-[auto_1fr_auto]"
+      class="bg-primary w-screen h-screen place-items-center grid grid-rows-[auto_1fr_auto]"
     >
-      <header
-        class="bg-primary w-full md:w-3/4 flex justify-between items-center p-8"
-      >
-        <a href="/"><h1 class="text-white text-4xl font-medium">zType</h1></a>
+      <header class="w-full md:w-4/6 flex justify-between items-center p-8">
+        <a href="/" class="flex items-center">
+          <svg
+            class="w-[50px] mr-3 fill-secondary"
+            version="1.1"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            viewBox="0 0 377.343 377.343"
+            xml:space="preserve"
+            stroke="#E2B714"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_iconCarrier">
+              <g>
+                <path
+                  d="M301.689,53.505H75.651c-10.876,0-19.725,8.843-19.725,19.713v230.904c0,10.878,8.843,19.727,19.725,19.727h226.039 c10.873,0,19.722-8.843,19.722-19.727V73.218C321.406,62.348,312.562,53.505,301.689,53.505z M188.67,227.7H79.521v-12.728 l60.921-111.861H84.756V75.026H188.29v15.354L128.938,199.52h59.732V227.7z M338.677,0H38.662C19.094,0,3.226,15.869,3.226,35.434 v306.462c0,19.581,15.869,35.447,35.437,35.447h300.02c19.568,0,35.436-15.866,35.436-35.447V35.434 C374.117,15.869,358.25,0,338.677,0z M335.381,304.122c0,18.572-15.113,33.691-33.691,33.691H75.651 c-18.576,0-33.695-15.114-33.695-33.691V73.218c0-18.569,15.114-33.688,33.695-33.688h226.039 c18.572,0,33.691,15.114,33.691,33.688V304.122z"
+                ></path>
+              </g>
+            </g>
+          </svg>
+          <h1 class="text-bright text-3xl font-normal">zType</h1></a
+        >
         <button>
           <a
             href="http://github.com/ziadevcom"
             target="_blank"
             rel="noopener noreferrer"
           >
-            <img src="./images/github.png" alt="github logo" class="w-[50px]" />
+            <svg
+              class="w-[50px]"
+              viewBox="0 0 16 16"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+            >
+              <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+              <g id="SVGRepo_iconCarrier">
+                <path
+                  class="fill-bright"
+                  fill-rule="evenodd"
+                  d="M8 1C4.133 1 1 4.13 1 7.993c0 3.09 2.006 5.71 4.787 6.635.35.064.478-.152.478-.337 0-.166-.006-.606-.01-1.19-1.947.423-2.357-.937-2.357-.937-.319-.808-.778-1.023-.778-1.023-.635-.434.048-.425.048-.425.703.05 1.073.72 1.073.72.624 1.07 1.638.76 2.037.582.063-.452.244-.76.444-.935-1.554-.176-3.188-.776-3.188-3.456 0-.763.273-1.388.72-1.876-.072-.177-.312-.888.07-1.85 0 0 .586-.189 1.924.716A6.711 6.711 0 018 4.381c.595.003 1.194.08 1.753.236 1.336-.905 1.923-.717 1.923-.717.382.963.142 1.674.07 1.85.448.49.72 1.114.72 1.877 0 2.686-1.638 3.278-3.197 3.45.251.216.475.643.475 1.296 0 .934-.009 1.688-.009 1.918 0 .187.127.404.482.336A6.996 6.996 0 0015 7.993 6.997 6.997 0 008 1z"
+                  clip-rule="evenodd"
+                ></path>
+              </g>
+            </svg>
           </a>
         </button>
       </header>
       <main class="w-full p-8 flex flex-col justify-center items-center">
         <div
-          class="w-full flex flex-col justify-center md:justify-between md:flex-row md:w-3/4"
+          class="w-full flex flex-col justify-center md:justify-between md:flex-row md:w-4/6"
         >
-          <p id="time-container" class="text-white text-center mb-4 text-3xl">
+          <p id="time-container" class="text-bright text-center mb-4 text-3xl">
             30
           </p>
           <div
-            class="toolset p-3 rounded-md bg-zinc-900 mb-8 align-bottom flex justify-center"
+            class="toolset p-3 rounded-md bg-dark/60 mb-8 align-bottom flex justify-center"
           >
             <button
-              class="tool-btn active-tool-btn"
+              class="tool-btn"
               data-filter="time"
               onclick="timeFilter(event)"
               data-time="30"
@@ -71,28 +104,46 @@
             >
               Numbers
             </button>
-            <button class="tool-btn" onclick="location.reload();">
-              Reload
-            </button>
+            <button class="tool-btn" onclick="resetFilters()">Reset</button>
           </div>
         </div>
         <div class="cursor"></div>
         <div
-          class="words-container md:w-3/4 min-h-[300px] max-h-[300px] flex flex-wrap content-start overflow-x-auto"
+          class="words-container md:md:w-4/6 min-h-[0px] max-h-[300px] mb-12 flex flex-wrap content-start overflow-x-auto focus:outline-none"
+          tabindex="0"
         ></div>
         <div
-          class="results-container hidden md:w-3/4 min-h-[300px] max-h-[300px] flex flex-col justify-center"
+          class="results-container hidden md:w-4/6 min-h-[300px] max-h-[300px] flex flex-col justify-center"
         >
           <h2 class="text-3xl text-secondary">Time Finished.</h2>
-          <p class="text-white mt-4 mb-4">
+          <p class="text-bright mt-4 mb-4">
             Following are your results. To take the test again, click on reload
             button in top right.
           </p>
           <div id="results" class="flex flex-row"></div>
         </div>
+        <button
+          class="hover:bg-bright py-3 px-6 group transition-all rounded-[4px]"
+          onclick="restartTest()"
+        >
+          <svg
+            class="w-6"
+            viewBox="0 0 512 512"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+            <g id="SVGRepo_iconCarrier">
+              <path
+                class="fill-bright group-hover:fill-dark transition-all duration-200"
+                d="M265.614,206.387H456V16H424V149.887L397.863,123.75c-79.539-79.539-208.96-79.54-288.5,0s-79.539,208.96,0,288.5a204.232,204.232,0,0,0,288.5,0l-22.627-22.627c-67.063,67.063-176.182,67.063-243.244,0s-67.063-176.183,0-243.246,176.182-67.063,243.245,0l28.01,28.01H265.614Z"
+                class="ci-primary"
+              ></path>
+            </g>
+          </svg>
+        </button>
       </main>
-      <footer class="bg-primary w-full p-8 text-center text-white">
-        Developed By Zia 🤓
+      <footer class="font-light text-[16px] w-full p-8 text-center text-white">
+        Developed By Zia
       </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
